# pyipcalc

./: pyproject.toml  readme.md
.github/: copilot-instructions.md
pyipcalc/: __init__.py  __main__.py  calculator.py  cli.py  display.py  main.py  models.py
tests/: __init__.py  test_pyipcalc.py
